--- a/Homework/Class 2/brownies.html
+++ b/Homework/Class 2/brownies.html
@@ -1,70 +1,96 @@
-﻿<h1>Deep Dish Brownies</h1>
+﻿<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Brownies!</title>
+	</head>
+<body>
 
-<img src="brownies.jpg" alt="Picture of Delicious Brownies"> 
+	<form>
 
-<h4>Recipe by: Biz McMahon</h4>
+		<label for="zebra">First Name:</label>
+		<input id="zebra" type="text">
 
-<section>
+		<label for="lemur">Mobile Number:</label>
+		<input id="lemur" type="tel">
 
-	<h2>Related Recipes</h2>
-	<ul>
-		<li><a href="">Chewiest Brownies</a></li>
+		<label for="panda">Email Address:</label>
+		<input id="panda" type="email">
 
-		<li><a href="">Can't Tell They're Low-fat Brownies</a></li>
+	</form>
 
-		<li><a href="">Bodacious Brownies</a></li>
-
-		<li><a href="">Katrina's Best-Ever Chocolate Brownies</a></li>
-
-		<li><a href="">Easy Fudge Brownies</a></li>
-	</ul>
-
-</section>
-
-<section>
-
-
-<h3>Prep Time</h3>
-<span>60 mins</span>
-
-<h3>Servings</h3>
-<span>9</span>
-
-<h3>Ingredients</h3>
-	<ul>
-		<li>3/4 cup butter, melted</li>
-		<li>1 1/2 cups white sugar</li>
-		<li>1 1/2 teaspoons vanilla extract</li>
-		<li>3 eggs</li>
-		<li>3/4 cup all-purpose flour</li>
-		<li>1/2 cup unsweetened cocoa powder</li>
-		<li>1/2 teaspoon baking powder</li>
-		<li>1/2 teaspoon salt</li>
-	</ul>
-
-<h2>Directions</h2>
-
-<ol>
 	
-	<li>Preheat oven to 350 degrees F (175 degrees C) and Grease an 8 inch square pan.</li>
-	<li>In a large bowl, blend melted butter, sugar and vanilla.</li>
-	<li>Beat in eggs one at a time.</li>
-	<li>Combine the flour, cocoa, baking powder and salt. Gradually blend into the egg mixture.</li>
-	<li>Spread the batter into the prepared pan.</li>
-	<li>Bake in preheated oven for 40 to 45 minutes, or until brownies begin to pull away from the sides of the pan.</li>
-	<li>Let brownies cool, then cut into squares. Enjoy!</li>
-</ol>
+	<h1>Deep Dish Brownies</h1>
 
-<h3>Tip</h3>
+	<img src="brownies.jpg" alt=" Delicious Brownies"> 
 
-<p>Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up easier.</p>
+	<h4>Recipe by: Biz McMahon</h4>
+
+	<section>
+
+		<h2>Related Recipes</h2>
+		<ul>
+			<li><a href="x">Chewiest Brownies</a></li>
+
+			<li><a href="x">Can't Tell They're Low-fat Brownies</a></li>
+
+			<li><a href="x">Bodacious Brownies</a></li>
+
+			<li><a href="x">Katrina's Best-Ever Chocolate Brownies</a></li>
+
+			<li><a href="x">Easy Fudge Brownies</a></li>
+		</ul>
+
+	</section>
+
+	<section>
 
 
-<h3>Nutritional Info</h3>
+		<h3>Prep Time</h3>
+		<span>60 mins</span>
 
-<span>340 cals</span>
+		<h3>Servings</h3>
+		<span>9</span>
+
+		<h3>Ingredients</h3>
+			<ul>
+				<li>3/4 cup butter, melted</li>
+				<li>1 1/2 cups white sugar</li>
+				<li>1 1/2 teaspoons vanilla extract</li>
+				<li>3 eggs</li>
+				<li>3/4 cup all-purpose flour</li>
+				<li>1/2 cup unsweetened cocoa powder</li>
+				<li>1/2 teaspoon baking powder</li>
+				<li>1/2 teaspoon salt</li>
+			</ul>
+
+		<h2>Directions</h2>
+
+		<ol>
+			<li>Preheat oven to 350 degrees F (175 degrees C) and Grease an 8 inch square pan.</li>
+			<li>In a large bowl, blend melted butter, sugar and vanilla.</li>
+			li>Beat in eggs one at a time.</li>
+			<li>Combine the flour, cocoa, baking powder and salt. Gradually blend into the egg mixture.</li>
+			<li>Spread the batter into the prepared pan.</li>
+			<li>Bake in preheated oven for 40 to 45 minutes, or until brownies begin to pull away from the sides of the pan.</li>
+			<li>Let brownies cool, then cut into squares. Enjoy!</li>
+		</ol>
+
+		<h3>Tip</h3>
+
+		<p>Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up easier.</p>
 
 
-<p>Find this recipe <a href="http://allrecipes.com/recipe/11063/deep-dish-brownies">here</a></p>
+		<h3>Nutritional Info</h3>
 
-</section>
+		<span>340 cals</span>
+
+
+		<p>Find this recipe <a href="http://allrecipes.com/recipe/11063/deep-dish-brownies">here</a></p>
+
+	</section>
+
+</body>
+</html>
+
