Completed Class 4 Simple Site Lab

--- a/Homework/Class 4/simple-site-lab.html
+++ b/Homework/Class 4/simple-site-lab.html
@@ -14,7 +14,7 @@
 
         <nav>
             <ul>
-                <li><a href="#">About Us</a></li>
+                <li>About Us</li>
                 <li><a href="#">Portfolio</a></li>
             </ul>
         </nav>
