Added h1 and gif

--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
 
     <section>
 
+      <!-- <div>
+        <h1>A garden entry for every 100Devs class done,</h1>
+        <p>about everything from what I learned, the homework and projects I did, as well as any difficulties I faced and my strategies to overcome them.</p>
+      </div>
+      <div><img src="images/giphy.gif" alt="plant gif"></div> -->
+
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h1>A garden entry for every 100Devs class I've done.</h1>
+                <p>I share anything from what I learned, to the homework and projects I did, as well as any difficulties I faced and my strategies to overcome them.</p>
+            </div>
+            <div class="col-md-6">
+                <img src="images/giphy.gif" alt="plant gif">
+            </div>
+        </div>
+    </div>
+
+    </section>
+
+    <section>
+
       <div>
         <h3>Class 1</h3>
         <img class="journal-cover" src="images/barbara.jpg" alt="Barbara Oakley">
