Changed gif size

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>I share anything from what I learned, to the homework and projects I did, as well as any difficulties I faced and my strategies to overcome them.</p>
             </div>
             <div class="col-md-6">
-                <img src="images/giphy.gif" alt="plant gif">
+                <img class="plant" src="images/giphy.gif" alt="plant gif">
             </div>
         </div>
     </div>
