Complete CSS Layout 2

--- a/Homework/Class 5/layout2/layout2.html
+++ b/Homework/Class 5/layout2/layout2.html
@@ -13,7 +13,7 @@
 
     <section class="topSection">1</section>
 
-    <section class="bottomSections frist">2</section>
+    <section class="bottomSections first">2</section>
     <section class="bottomSections second">3</section>
 
     <footer>Bottom</footer>
