--- a/Homework/Class 5/layout3/layout3.html
+++ b/Homework/Class 5/layout3/layout3.html
@@ -11,10 +11,10 @@
 
     <header>Top</header>
 
-    <section class="first"></section>
-    <section class="second"></section>
-    <section class="third"></section>
-    <section class="fourth"></section>
+    <section class="first">1</section>
+    <section class="second">2</section>
+    <section class="third">3</section>
+    <section class="fourth">4</section>
 
     <footer>Bottom</footer>
     
