Completed home page structure

--- a/homework.html
+++ b/homework.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoemwork</title>
+    <title>Homework</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,6 +46,11 @@
         </nav>
 
     </header>
+
+    <section class="pending">
+        <img class="img-cat" src="images/catconcentrating.jpg" alt="Cat">
+        <h1>Still nothing...</h1>
+    </section>
 
     
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
