--- a/gems.html
+++ b/gems.html
@@ -47,6 +47,11 @@
 
     </header>
 
+    <section class="pending">
+        <img class="img-cat" src="images/catannoyed.jpg" alt="Cat">
+        <h1>You're still looking around, ay?</h1>
+    </section>
+
     
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
