--- a/index.html
+++ b/index.html
@@ -137,7 +137,18 @@
               <h3>Class #</h3>
               <img class="journal-cover" src="images/#" alt="#">
               <h2 class="mt-2">Summarized title</h2>
-              <span>27 June '24</span>
+              <span>26 June '24</span>
+            </div>
+          </div></a>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+          <a href="journal-posts/#"><div class="card">
+            <div class="card-body text-center">
+              <h3>Class 7</h3>
+              <img class="journal-cover" src="images/#" alt="#">
+              <h2 class="mt-2">Summarized title</h2>
+              <span>28 June '24</span>
             </div>
           </div></a>
         </div>
