--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
           <a href="http://"><div class="card">
             <div class="card-body text-center">
-              <h3>Class #</h3>
+              <h3>Class 4</h3>
               <img class="journal-cover" src="images/#" alt="#">
               <h2 class="mt-2">Summarized title</h2>
               <span>30 May '24</span>
@@ -121,10 +121,10 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
           <a href="http://"><div class="card">
             <div class="card-body text-center">
-              <h3>Class #</h3>
+              <h3>Class 5</h3>
               <img class="journal-cover" src="images/#" alt="#">
               <h2 class="mt-2">Summarized title</h2>
-              <span>25 June '24</span>
+              <span>15 June '24</span>
             </div>
           </div></a>
         </div>
@@ -134,7 +134,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
           <a href="http://"><div class="card">
             <div class="card-body text-center">
-              <h3>Class #</h3>
+              <h3>Class 6</h3>
               <img class="journal-cover" src="images/#" alt="#">
               <h2 class="mt-2">Summarized title</h2>
               <span>26 June '24</span>
@@ -169,15 +169,15 @@
       </div>
     </section>
 
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
       <div class="col-md-4 d-flex align-items-center">
           <span class="mb-3 mb-md-0 text-muted">Sam Mhlongo &copy; 2024</span>
       </div>
     
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a href="#"><i class='bx bxl-github bx-md' style='color:black'></i></box-icon></li>
-          <li class="ms-3"><a href="#"><i class='bx bxl-linkedin bx-md' style='color:black'></i></box-icon></i></a></li>
-          <li class="ms-3"><a href="#"><i class='bx bxl-twitter bx-md' style='color:black'></i></a></li>
+          <li class="ms-3"><a href="#"><i class='bx bxl-github bx-sm' style='color:black'></i></box-icon></li>
+          <li class="ms-3"><a href="#"><i class='bx bxl-linkedin bx-sm' style='color:black'></i></box-icon></i></a></li>
+          <li class="ms-3"><a href="#"><i class='bx bxl-twitter bx-sm' style='color:black'></i></a></li>
       </ul>
   </footer>
 
