--- a/archive.html
+++ b/archive.html
@@ -30,7 +30,6 @@
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about-me.html">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="homework.html">Homework</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="gems.html">Gems</a></li>
                     </ul>
@@ -38,7 +37,7 @@
                     <!-- Centered Logo -->
                     <a class="navbar-brand mx-lg-auto" href="#"><img class="logo" src="images/logo.png" alt="Logo"></a>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><span class="nav-link">#100Devs Digital Garden</span></li>
+                        <li class="nav-item"><a class="nav-link" href="digital-garden.html">#100Devs Digital Garden</a></li>
                         <li class="nav-item"><a class="nav-link" href="archive.html">Archive</a></li>
                     </ul>
                 </div>
@@ -55,7 +54,7 @@
     
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-muted">Sam Mhlongo &copy; 2024</span>
+            <span class="mb-3 mb-md-0 text-muted">Thenjiwe Mhlongo &copy; 2024</span>
         </div>
       
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
