--- a/Homework/Class 8/bbc-layout/bbc-website.html
+++ b/Homework/Class 8/bbc-layout/bbc-website.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BBC</title>
+
+        <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
 
@@ -11,9 +14,8 @@
 
         <header>
             <nav>
-
-                <img src="Images/bbc-logo.png" alt="BBC Logo">
                 <ul>
+                    <li><a href="#"><img src="Images/bbc-logo-inverted.png" alt="BBC Logo"></a></li>
                     <li><a href="#"><img src="Images/profile-user.png" alt="Sign In Icon">Sign in</a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">News</a></li>
@@ -23,12 +25,13 @@
                     <li><a href="#">Travel</a></li>
                     <li><a href="#">Future</a></li>
                     <li><a href="#">Culture</a></li>
+                    <li><a href="#">
+                        <form>
+                            <label for="front-search">Search</label>
+                            <input id="front-search" type="search">
+                        </form>
+                    </a></li>
                 </ul>
-                <form>
-                    <label for="front-search">Search</label>
-                    <input id="front-search" type="search">
-                </form>
-
             </nav>
         </header>
 
@@ -36,40 +39,46 @@
 
         <!-- Highlights Section-->
 
-        <section id="highlights">
+        <section class="box highlights">
 
+        <section class="info">
             <h3>Welcome to BBC.com</h3>
             <h5>Thursday, 13 August</h5>
+        </section>
 
-            <section>
+        <section class="halves">
+            <section class="headline img-one">
                 <h2>Israel & UAE strike historic peace deal</h2>
                 <p>Israel and the UAE agree to normalise relations, making the third Israel-Arab peace deal.</p>
                 <h4>Middle East</h4>
             </section>
+        </section>
 
+        <section class="halves">
             <section>
 
-                <section>
+                <section class="sub-headline img-two">
                     <h2>Americans, go home: Tension at Canada-US border</h2>
                     <h4>Canada</h4>
                 </section>
 
-                <section>
+                <section class="sub-headline img-three">
                     <h2>How will the world vaccinate seven billion people?</h2>
                     <h4>Health</h4>
                 </section>
 
-                <section>
+                <section class="sub-headline img-four">
                     <h2>The online 'productivity gyms'</h2>
                     <h4>Worklife</h4>
                 </section>
 
-                <section>
+                <section class="sub-headline img-five">
                     <h2>The folk singer murdered for his music</h2>
                     <h4>Culture</h4>
                 </section>
 
             </section>
+        </section>
 
             
         </section>
@@ -78,7 +87,7 @@
 
         <!-- News Section Section-->
 
-        <section id="news">
+        <section class="box news">
 
             <h3>News</h3>
 
