Started layout css homework

--- a/Homework/Class 8/layout3/index.html
+++ b/Homework/Class 8/layout3/index.html
@@ -6,13 +6,36 @@
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Blank Template</title>
+		<title>BBC Layout</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#"><img src="images/bbc-logo.png" alt="bbc-logo"></a></li>
+					<li><a href="#"><img src="images/profile-user.png" alt="profile-user">Sign In</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">News</a></li>
+					<li><a href="#">Sport</a></li>
+					<li><a href="#">Reel</a></li>
+					<li><a href="#">Worklife</a></li>
+					<li><a href="#">Travel</a></li>
+					<li><a href="#">Future</a></li>
+					<li><a href="#">Culture</a></li>
+					<li><a href="#">More</a></li>
+				</ul>
+			</nav>
+
+			<section><form>
+				<label for="front-search">Search</label>
+				<input id="front-search" type="search">
+			</form></section>
+		</header>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
