Continue with BBC css layout

--- a/Homework/Class 8/layout1/index.html
+++ b/Homework/Class 8/layout1/index.html
@@ -61,7 +61,9 @@
 		</section>
 
 		<section class="body">
-			<h2>Why Khan Academy works</h2>
+			<div class="second">
+				<h2>Why Khan Academy works</h2>
+			</div>
 		</section>
 
 		<script type="text/javascript" src="js/main.js"></script>
