Try fixing image issue

--- a/digital-garden.html
+++ b/digital-garden.html
@@ -142,7 +142,7 @@
             <a href="journal-posts/journal-template.html"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 2</h3>
-                <img class="journal-cover" src="images/accesibility.jpg" alt="Accesibility example">
+                <img class="journal-cover img-fluid" src="images/accesibility.jpg" alt="Accesibility example">
                 <h2 class="mt-2">Overlooked accesibility // HTML basics</h2>
               </div>
             </div></a>
@@ -154,7 +154,7 @@
             <a href="journal-posts/journal-template.html"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 1</h3>
-                <img class="journal-cover" src="images/barbara.jpg" alt="Barbara Oakley">
+                <img class="journal-cover img-fluid" src="images/barbara.jpg" alt="Barbara Oakley">
                 <h2 class="mt-2">Barbara was fun // Learning How To Learn</h2>
               </div>
             </div></a>
