--- a/digital-garden.html
+++ b/digital-garden.html
@@ -71,7 +71,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class #</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
@@ -83,7 +83,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 7</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
@@ -95,7 +95,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 6</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
@@ -107,7 +107,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 5</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
@@ -119,7 +119,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 4</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
@@ -131,7 +131,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 3</h3>
-                <img class="journal-cover" src="images/#" alt="#">
+                <img class="journal-cover" img-fluid src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title</h2>
               </div>
             </div></a>
