Update garden layout

--- a/digital-garden.html
+++ b/digital-garden.html
@@ -72,10 +72,58 @@
               <div class="card-body text-center">
                 <h3>Class #</h3>
                 <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <h2 class="mt-2">Summarized title. Not started yet... YET</h2>
               </div>
             </div></a>
           </div> -->
+
+          <!-- Class 11 -->
+
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <a href="journal-posts/#"><div class="card">
+              <div class="card-body text-center">
+                <h3>Class 11</h3>
+                <img class="journal-cover" img-fluid src="images/nothing-here.png" alt="#">
+                <h2 class="mt-2">Not started yet...</h2>
+              </div>
+            </div></a>
+          </div>
+
+          <!-- Class 10 -->
+
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <a href="journal-posts/#"><div class="card">
+              <div class="card-body text-center">
+                <h3>Class 10</h3>
+                <img class="journal-cover" img-fluid src="images/nothing-here.png" alt="#">
+                <h2 class="mt-2">Not started yet...</h2>
+              </div>
+            </div></a>
+          </div>
+
+          <!-- Class 9 -->
+
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <a href="journal-posts/#"><div class="card">
+              <div class="card-body text-center">
+                <h3>Class 9</h3>
+                <img class="journal-cover" img-fluid src="images/networking.jpg" alt="#">
+                <h2 class="mt-2">The networking road bump begins</h2>
+              </div>
+            </div></a>
+          </div>
+
+          <!-- Class 8 -->
+
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+            <a href="journal-posts/#"><div class="card">
+              <div class="card-body text-center">
+                <h3>Class 8</h3>
+                <img class="journal-cover" img-fluid src="images/khan-academy.png" alt="#">
+                <h2 class="mt-2">Floats in practice, formating overload</h2>
+              </div>
+            </div></a>
+          </div>
               
           <!-- Class 7 -->
   
@@ -83,8 +131,8 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 7</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <img class="journal-cover" img-fluid src="images/flexbox.png" alt="#">
+                <h2 class="mt-2">Flexbox is a bit confusing right now</h2>
               </div>
             </div></a>
           </div>
@@ -95,8 +143,8 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 6</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <img class="journal-cover" img-fluid src="images/floats.png" alt="#">
+                <h2 class="mt-2">I am really enjoying floats</h2>
               </div>
             </div></a>
           </div>
@@ -107,8 +155,8 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 5</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <img class="journal-cover" img-fluid src="images/typing.jpeg" alt="#">
+                <h2 class="mt-2">My dad tried to get me started with typing</h2>
               </div>
             </div></a>
           </div>
@@ -119,8 +167,8 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 4</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <img class="journal-cover" img-fluid src="images/shay-howe.png" alt="#">
+                <h2 class="mt-2">Getting through Shay Howe readings</h2>
               </div>
             </div></a>
           </div>
@@ -131,8 +179,8 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 3</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
-                <h2 class="mt-2">Summarized title</h2>
+                <img class="journal-cover" img-fluid src="images/angela-yu.jfif" alt="#">
+                <h2 class="mt-2">Is one Udemy course enough?</h2>
               </div>
             </div></a>
           </div>
