--- a/digital-garden.html
+++ b/digital-garden.html
@@ -71,7 +71,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class #</h3>
-                <img class="journal-cover" img-fluid src="images/#" alt="#">
+                <img class="journal-cover img-fluid" src="images/#" alt="#">
                 <h2 class="mt-2">Summarized title. Not started yet... YET</h2>
               </div>
             </div></a>
@@ -83,7 +83,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 11</h3>
-                <img class="journal-cover" img-fluid src="images/nothing-here.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/nothing-here.png" alt="#">
                 <h2 class="mt-2">Not started yet...</h2>
               </div>
             </div></a>
@@ -95,7 +95,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 10</h3>
-                <img class="journal-cover" img-fluid src="images/nothing-here.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/nothing-here.png" alt="#">
                 <h2 class="mt-2">Not started yet...</h2>
               </div>
             </div></a>
@@ -107,7 +107,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 9</h3>
-                <img class="journal-cover" img-fluid src="images/networking.jpg" alt="#">
+                <img class="journal-cover img-fluid" src="images/networking.jpg" alt="#">
                 <h2 class="mt-2">The networking road bump begins</h2>
               </div>
             </div></a>
@@ -119,7 +119,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 8</h3>
-                <img class="journal-cover" img-fluid src="images/khan-academy.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/khan-academy.png" alt="#">
                 <h2 class="mt-2">Floats in practice, formating overload</h2>
               </div>
             </div></a>
@@ -131,7 +131,7 @@
             <a href="journal-posts/#"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 7</h3>
-                <img class="journal-cover" img-fluid src="images/flexbox.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/flexbox.png" alt="#">
                 <h2 class="mt-2">Flexbox is a bit confusing right now</h2>
               </div>
             </div></a>
@@ -143,7 +143,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 6</h3>
-                <img class="journal-cover" img-fluid src="images/floats.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/floats.png" alt="#">
                 <h2 class="mt-2">I am really enjoying floats</h2>
               </div>
             </div></a>
@@ -155,7 +155,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 5</h3>
-                <img class="journal-cover" img-fluid src="images/typing.jpeg" alt="#">
+                <img class="journal-cover img-fluid" src="images/typing.jpeg" alt="#">
                 <h2 class="mt-2">My dad tried to get me started with typing</h2>
               </div>
             </div></a>
@@ -167,7 +167,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 4</h3>
-                <img class="journal-cover" img-fluid src="images/shay-howe.png" alt="#">
+                <img class="journal-cover img-fluid" src="images/shay-howe.png" alt="#">
                 <h2 class="mt-2">Getting through Shay Howe readings</h2>
               </div>
             </div></a>
@@ -179,7 +179,7 @@
             <a href="http://"><div class="card">
               <div class="card-body text-center">
                 <h3>Class 3</h3>
-                <img class="journal-cover" img-fluid src="images/angela-yu.jfif" alt="#">
+                <img class="journal-cover img-fluid" src="images/angela-yu.jfif" alt="#">
                 <h2 class="mt-2">Is one Udemy course enough?</h2>
               </div>
             </div></a>
