Change homepage details and nav

--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
                 <!-- Collapsible Content -->
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about-me.html">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="gems.html">Gems</a></li>
+                        <li><a class="navbar-brand mx-lg-auto" href="index.html"><img class="logo" src="images/logo.png" alt="Logo"></a></li>
                     </ul>
                     
                     <!-- Centered Logo -->
-                    <a class="navbar-brand mx-lg-auto" href="#"><img class="logo" src="images/logo.png" alt="Logo"></a>
+                    
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="digital-garden.html">#100Devs Digital Garden</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">#100Devs Digital Garden</a></li>
                         <li class="nav-item"><a class="nav-link" href="archive.html">Archive</a></li>
                     </ul>
                 </div>
@@ -51,8 +48,8 @@
         <div class="container banner">
           <div class="row justify-content-center align-items-center">
               <div class="col-md-6 mb-4 mb-md-0">
-                  <h1>A garden entry for every 100Devs class I've done.</h1>
-                  <p>I share anything from what I learned, to the homework and projects I did, as well as any difficulties I faced and my strategies to overcome them.</p>
+                  <h1>A entry for every 100Devs class I've done.</h1>
+                  <p>Storing all my homeowork and projects for my #100Devs classes that I've done. A sweet little visual entry for each class.</p>
               </div>
               <div class="col-md-6">
                   <img class="plant" src="images/giphy.gif" alt="plant gif">
