--- a/Homework/Class 12/simple-calculator/index.html
+++ b/Homework/Class 12/simple-calculator/index.html
@@ -18,6 +18,7 @@
 			<li id="dominosPizza">+3</li>
 			<li id="zebra">+9</li>
 			<li id="cantThinkOfAnything">-2</li>
+			<li id="steez">+47</li>
 		</ul>
 		<h2>Result: <span id="placeToPutResult"></span></h2>
 
